# GBColor-Emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cpu/: cpu.h  cpu_flag.cpp  cpu_flag.h  cpu_reg.h
header/: IMbc.h  IMmu.h  cart.h  cpu.h  cpu_flag.h  cpu_reg.h  hw_reg.h  hw_reg_addr.h  int_ctrl.h  mbc3.h  mem.h  mem_map.h  mem_util.h  mmu.h  screen.h  timer.h  util.h
instr/: instr_debug.h  instructions.cpp  op_code_map.h  opcode_map.cpp  operator.cpp  operator.h
mbc/: IMbc.h  cart.cpp  cart.h
memory/: hw_reg.cpp  hw_reg.h  int_ctrl.h  mem.cpp  mem.h  mem_util.h  mmu.cpp  mmu.h
src/: Screen.cpp  cart.cpp  cpu.cpp  cpu_flag.cpp  cpu_reg.cpp  hw_reg.cpp  int_ctrl.cpp  main.cpp  mbc3.cpp  mem.cpp  mem_util.cpp  mmu.cpp  timer.cpp
utils/: bit_util.cpp  bit_util.h  mem_util.cpp  mem_util.h  util.cpp  util.h
